--- a/fontend/index.html
+++ b/fontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All In One (AIO) - E-commerce Platform</title>
+   <script src="https://www.payhere.lk/lib/payhere.js"></script>
     <meta name="description" content="AIO - Your complete e-commerce platform for products and services. Create your store, sell products, or offer services." />
   </head>
   <body>
