--- a/fontend/index.html
+++ b/fontend/index.html
@@ -1,13 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All In One (AIO) - E-commerce Platform</title>
-   <script src="https://www.payhere.lk/lib/payhere.js"></script>
-    <meta name="description" content="AIO - Your complete e-commerce platform for products and services. Create your store, sell products, or offer services." />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>All In One (AIO) - E-commerce Platform</title>
+  <meta name="description" content="AIO - Your complete e-commerce platform for products and services. Create your store, sell products, or offer services in Sri Lanka." />
+  <meta name="keywords" content="ecommerce, online shopping, sri lanka, sell products, sell services, AIO, All in One" />
+  <meta name="author" content="AIO Team" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="AIO - Your All-In-One E-commerce Platform in Sri Lanka" />
+  <meta property="og:description" content="Start your online store today with AIO. Sell products and services easily across Sri Lanka." />
+  <meta property="og:image" content="/og-image.jpg" /> <!-- Replace with your real OG image -->
+  <meta property="og:url" content="https://aiocart.lk" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AIO - All-In-One E-commerce Platform" />
+  <meta name="twitter:description" content="Sell your products and services online. Join AIO now!" />
+  <meta name="twitter:image" content="/og-image.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- hreflang (English + Sinhala support) -->
+  <link rel="alternate" hreflang="en" href="https://aiocart.lk" />
+  <link rel="alternate" hreflang="si" href="https://aiocart.lk/si" />
+
+<!-- Structured Data for Organization -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "AIO Cart",
+  "url": "https://aiocart.lk",
+  "logo": "https://aiocart.lk/logo.png",
+  "sameAs": [
+    "https://facebook.com/aiocart",
+    "https://instagram.com/aiocart.lk"
+  ]
+}
+</script>
+
+
+  <script src="https://www.sandbox.payhere.lk/lib/payhere.js"></script>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
