--- a/fontend/index.html
+++ b/fontend/index.html
@@ -45,7 +45,7 @@
 </script>
 
 
-  <script src="https://www.sandbox.payhere.lk/lib/payhere.js"></script>
+  <script src="https://sandbox.payhere.lk/lib/payhere.js"></script>
 </head>
 
   <body>
