--- a/fontend/index.html
+++ b/fontend/index.html
@@ -44,7 +44,7 @@
 </script>
 
 
-  <script src="https://sandbox.payhere.lk/lib/payhere.js"></script>
+  <script src="https://payhere.lk/lib/payhere.js"></script>
 </head>
 
   <body>
